TRIK Studio 3.1.3:
- Практически полная поддержка EV3! Реализован режим автономной работы со стандартной прошивкой EV3, двумерная модель для EV3, поддержаны новые сенсоры, значительно улучшены старые механизмы работы среды с устройством EV3.
- Значительно улучшена производительность редактора. Теперь многие операции (такие как отрисовка элементов, вставка большого количества элементов и их выделение) работают в десятки раз быстрее!
- Добавлена экспериментальная поддержка гироскопа и акселерометра в 2D модели.
- Среда больше не "подвисает" на некоторое время, если попробовать загрузить программу на неправильный IP-адрес.
- Параллельные задачи для Lego NXT теперь работают значительно лучше. Переключение потоков теперь срабатывает при выполнении блоков ожидания (раннее оно происходило лишь при завершении работы потоков). Также рисование на экране теперь может осуществляться из нескольких потоков.
- Поддержан сенсор касания для ТРИК.
- Механизм увеличения номера сгенерированного файла теперь более инллектуален: номер файла не будет увеличен, если только пользователь не редактировал сгенерированный файл самостоятельно. Доступно только для Windows.
- Обновления в документации.
- В установщик добавлен пульт управления роботом с компьютера.
- Блок завершения потока имеет значение 'main' по умолчанию.
- Конфигурирование сенсоров может теперь может производиться во вкладке с подпрограммой.
- Выбор COM-порта для режима общения с Lego (NXT или EV3) по Bluetooth теперь может производиться на панели инструментов, больше нет необходимости открывать окно
	настроек и искать это поле там.
- Кнопки на эмуляторе контроллера ТРИК теперь имеют стрелочки.
- Исправлено множество ошибок, самые значительные:
	- Восстановлена корректная работа модуля взаимодействия с драйвером fantom для NXT.
	- Исправлено "подвисание" среды, которое могло начинаться через некоторое время после начала отрисовки графиков.